fixed CHLK-3507 Teacher. Item view. Dropdown is cut off

--- a/Chalkable.Web/assets/sass2/4_pages/_announcement-view-page.sass
+++ b/Chalkable.Web/assets/sass2/4_pages/_announcement-view-page.sass
@@ -282,16 +282,16 @@
     height: 20px
 
   .grading-input-popup.chlk-pop-up-container
-    position: absolute
     display: none
     padding: 12px
     text-align: left
-    left: -15px
+    transform: translate(-50%, 0)
+    left: 50%
     top: 60px
     white-space: normal !important
     line-height: 24px
     +box-shadow(transparentize(#000, .8) 0 0 16px)
-    width: 100px
+    width: 107px
 
     &::before
       left: 50%
